--- a/AudioWithAVFoundation/01-record-audio/Starter/PenguinPet/PenguinPet/Info.plist
+++ b/AudioWithAVFoundation/01-record-audio/Starter/PenguinPet/PenguinPet/Info.plist
@@ -20,6 +20,8 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>오디오 기록 튜토리얼</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
